; ModuleID = '/home/carl/AnghaBench/git/extr_grep.c_grep_or_expr.c'
source_filename = "/home/carl/AnghaBench/git/extr_grep.c_grep_or_expr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grep_expr = type { %struct.TYPE_4__, i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { %struct.grep_expr*, %struct.grep_expr* }

@GREP_NODE_OR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.grep_expr* (%struct.grep_expr*, %struct.grep_expr*)* @grep_or_expr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.grep_expr* @grep_or_expr(%struct.grep_expr* %0, %struct.grep_expr* %1) #0 {
  %3 = alloca %struct.grep_expr*, align 8
  %4 = alloca %struct.grep_expr*, align 8
  %5 = alloca %struct.grep_expr*, align 8
  store %struct.grep_expr* %0, %struct.grep_expr** %3, align 8
  store %struct.grep_expr* %1, %struct.grep_expr** %4, align 8
  %6 = call %struct.grep_expr* @xcalloc(i32 1, i32 24)
  store %struct.grep_expr* %6, %struct.grep_expr** %5, align 8
  %7 = load i32, i32* @GREP_NODE_OR, align 4
  %8 = load %struct.grep_expr*, %struct.grep_expr** %5, align 8
  %9 = getelementptr inbounds %struct.grep_expr, %struct.grep_expr* %8, i32 0, i32 1
  store i32 %7, i32* %9, align 8
  %10 = load %struct.grep_expr*, %struct.grep_expr** %3, align 8
  %11 = load %struct.grep_expr*, %struct.grep_expr** %5, align 8
  %12 = getelementptr inbounds %struct.grep_expr, %struct.grep_expr* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 1
  store %struct.grep_expr* %10, %struct.grep_expr** %14, align 8
  %15 = load %struct.grep_expr*, %struct.grep_expr** %4, align 8
  %16 = load %struct.grep_expr*, %struct.grep_expr** %5, align 8
  %17 = getelementptr inbounds %struct.grep_expr, %struct.grep_expr* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  store %struct.grep_expr* %15, %struct.grep_expr** %19, align 8
  %20 = load %struct.grep_expr*, %struct.grep_expr** %5, align 8
  ret %struct.grep_expr* %20
}

declare dso_local %struct.grep_expr* @xcalloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
